@@ -10,6 +10,7 @@ Version 0.8.1 (ongoing):
 	HilbertArray.sqrt
 	TensorSubspace module
 	better performance
+	oplus (direct sum) for HilbertAtom
 
 Version 0.8 (2011-12-01):
 	as_np_matrix take {row,col}_space args
